--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "include/a3"]
 	path = include/a3
 	url = https://github.com/kushagra67414/a3.git
+[submodule "include/cglm"]
+	path = include/cglm
+	url = https://github.com/recp/cglm.git
