--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
 	"files.associations": {
-		"math.h": "c",
 		"transform.h": "c",
-		"mesh.h": "c"
+		"array": "c",
+		"string": "c",
+		"string_view": "c",
+		"math.h": "c"
 	}
 }
