--- a/minBuild/Makefile
+++ b/minBuild/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-SRC = $(wildcard ../src/*.c) $(wildcard ../src/*/*.c) $(wildcard ../src/*/*/*.c)
+SRC = $(wildcard ../src/*.c) $(wildcard ../src/*/*.c) $(wildcard ../src/*/*/*.c) $(wildcard ../src/*/*/*/*.c)
 LIBS = -lmingw32 -lglew32 -lglfw3dll -lopengl32
 DIRS = -I../include/ -L../lib/
 
